Archive2/4c/0e1e7b63ac97db/output
main.cpp:17:20: error: use of overloaded operator '+' is ambiguous (with operand types 'A' and 'A')
    std::cout << a + b << std::endl;
                 ~ ^ ~
main.cpp:6:10: note: candidate function
    bool operator+(A a);
         ^
main.cpp:9:6: note: candidate function
bool operator+(A, A)
     ^
1 error generated.
